cascade deletion for developer was fixed